[gd_scene load_steps=25 format=3 uid="uid://dhao0jph27emo"]

[ext_resource type="Script" path="res://Scripts/controller.gd" id="1_2ltqv"]
[ext_resource type="Texture2D" uid="uid://csibxv33fjo57" path="res://Art/player.png" id="1_sh4dg"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="2_c15fu"]
[ext_resource type="Script" path="res://Word_Lists/length_5.gd" id="2_ufba1"]
[ext_resource type="Script" path="res://Word_Lists/length_4.gd" id="3_w7i7t"]
[ext_resource type="Script" path="res://Word_Lists/length_3.gd" id="4_qpryw"]
[ext_resource type="Texture2D" uid="uid://3erory6bcqmd" path="res://Art/limit.png" id="5_ixkwl"]
[ext_resource type="AudioStream" uid="uid://clu7qv5yvwykd" path="res://SFX/sfx_destruction_shot.wav" id="7_epr37"]
[ext_resource type="Shader" path="res://Scenes/base.gdshader" id="7_uve58"]
[ext_resource type="AudioStream" uid="uid://cffrjukuwqwuo" path="res://SFX/sfx_hurt.wav" id="8_1c7sh"]
[ext_resource type="Texture2D" uid="uid://c4wjofiq4df8m" path="res://Art/filmstrip.png" id="8_01wh2"]
[ext_resource type="AudioStream" uid="uid://dq0lgjq6n44m7" path="res://SFX/sfx_game_over.wav" id="9_qjw3v"]
[ext_resource type="Theme" uid="uid://dgvf5d60po1mx" path="res://hrader_theme.tres" id="9_ved0s"]
[ext_resource type="Theme" uid="uid://dgq05x8j4ybyk" path="res://sub_theme.tres" id="10_4xw3u"]
[ext_resource type="Texture2D" uid="uid://cugwcpr06evky" path="res://Art/bullet.png" id="10_gkcfx"]
[ext_resource type="AudioStream" uid="uid://dl08r57lw88ca" path="res://Music/bgm_retro_main.ogg" id="11_730sg"]
[ext_resource type="Texture2D" uid="uid://davohfpx14c4c" path="res://Art/background_1.png" id="12_im7qr"]
[ext_resource type="Texture2D" uid="uid://dl8jgideppxbo" path="res://Art/background.jpg" id="12_l0w8w"]
[ext_resource type="Texture2D" uid="uid://iiyawqe20a6h" path="res://Art/background_2.png" id="13_6uspb"]
[ext_resource type="Texture2D" uid="uid://jejjspx74sgk" path="res://Art/planet_3.png" id="14_0ulrj"]
[ext_resource type="Texture2D" uid="uid://cw7ivux6bua63" path="res://Art/planet_2.png" id="15_53j36"]
[ext_resource type="Texture2D" uid="uid://dt6ipp7tykqwo" path="res://Art/planet_1.png" id="16_p4qqk"]
[ext_resource type="AudioStream" uid="uid://5mmh1uf6e11p" path="res://SFX/sfx_no_match.wav" id="16_uo0vf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_opipi"]
shader = ExtResource("7_uve58")
shader_parameter/offset = 20.0
shader_parameter/multiplier = 10.0

[node name="Base" type="Node2D"]
script = ExtResource("1_2ltqv")

[node name="WordLists" type="Node2D" parent="."]

[node name="Length_5" type="Node2D" parent="WordLists"]
script = ExtResource("2_ufba1")

[node name="Length_4" type="Node2D" parent="WordLists"]
script = ExtResource("3_w7i7t")

[node name="Length_3" type="Node2D" parent="WordLists"]
script = ExtResource("4_qpryw")

[node name="Limit" type="TextureRect" parent="."]
offset_left = 75.0
offset_top = -560.0
offset_right = 635.0
offset_bottom = 100.0
texture = ExtResource("5_ixkwl")

[node name="Overlay" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.509804)
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("12_l0w8w")

[node name="Enemies" type="Node2D" parent="."]
position = Vector2(0, 100)

[node name="Player" type="Area2D" parent="."]
position = Vector2(400, 550)
collision_layer = 2
collision_mask = 2
input_pickable = false
script = ExtResource("2_c15fu")

[node name="Line2D" type="Line2D" parent="Player"]
points = PackedVector2Array(0, -25, 0, -1000)
width = 2.0
default_color = Color(0.501961, 0, 1, 1)

[node name="Sprite" type="Sprite2D" parent="Player"]
texture = ExtResource("1_sh4dg")
hframes = 3

[node name="Trial_1" type="Sprite2D" parent="Player/Sprite"]
modulate = Color(1, 1, 1, 0.623529)
texture = ExtResource("1_sh4dg")
hframes = 3

[node name="Trial_2" type="Sprite2D" parent="Player/Sprite"]
modulate = Color(1, 1, 1, 0.392157)
texture = ExtResource("1_sh4dg")
hframes = 3

[node name="Trial_3" type="Sprite2D" parent="Player/Sprite"]
modulate = Color(1, 1, 1, 0.176471)
texture = ExtResource("1_sh4dg")
hframes = 3

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Player"]
polygon = PackedVector2Array(0, -30, 30, 30, -30, 30)

[node name="CooldownBar" type="ColorRect" parent="Player"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = 36.0
offset_right = 30.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="RayCast2D" type="RayCast2D" parent="Player"]
target_position = Vector2(0, -1000)
collide_with_areas = true
collide_with_bodies = false

[node name="sfx_destroy" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("7_epr37")

[node name="sfx_hit" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("8_1c7sh")

[node name="sfx_game_over" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("9_qjw3v")

[node name="GPUParticles2D" type="CPUParticles2D" parent="Player"]
emitting = false
amount = 32
lifetime = 4.0
one_shot = true
speed_scale = 4.0
explosiveness = 0.8
lifetime_randomness = 0.5
fixed_fps = 30
draw_order = 1
texture = ExtResource("10_gkcfx")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 60.0
angular_velocity_max = 90.0
color = Color(0.501961, 1, 0, 1)
hue_variation_max = 0.5

[node name="Red_Line" type="Line2D" parent="."]
points = PackedVector2Array(0, 700, 1000, 700)
width = 2.0
default_color = Color(1, 0, 0, 1)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Layer_1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(0, 800)

[node name="Sprite" type="Sprite2D" parent="ParallaxBackground/Layer_1"]
texture = ExtResource("12_im7qr")
centered = false

[node name="Layer_2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(0, 800)

[node name="Sprite" type="Sprite2D" parent="ParallaxBackground/Layer_2"]
position = Vector2(390, 354)
texture = ExtResource("13_6uspb")

[node name="Layer_3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.6, 0.6)
motion_mirroring = Vector2(0, 800)

[node name="Sprite" type="Sprite2D" parent="ParallaxBackground/Layer_3"]
position = Vector2(383, 435)
texture = ExtResource("14_0ulrj")

[node name="Layer_4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.8, 0.8)
motion_mirroring = Vector2(0, 800)

[node name="Sprite" type="Sprite2D" parent="ParallaxBackground/Layer_4"]
position = Vector2(537, 620)
texture = ExtResource("15_53j36")

[node name="Layer_5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 800)

[node name="Sprite" type="Sprite2D" parent="ParallaxBackground/Layer_5"]
position = Vector2(246, 179)
texture = ExtResource("16_p4qqk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BarLeft" type="TextureRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_opipi")
offset_left = -200.0
offset_right = 100.0
offset_bottom = 800.0
texture = ExtResource("8_01wh2")
stretch_mode = 1

[node name="BarRight" type="TextureRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_opipi")
offset_left = 600.0
offset_right = 900.0
offset_bottom = 800.0
texture = ExtResource("8_01wh2")
stretch_mode = 1

[node name="Header_1" type="Label" parent="CanvasLayer/BarRight"]
visible = false
layout_mode = 0
offset_left = 50.0
offset_top = 40.0
offset_right = 251.0
offset_bottom = 92.0
theme = ExtResource("9_ved0s")
text = "Score :"
horizontal_alignment = 1

[node name="Score" type="Label" parent="CanvasLayer/BarRight"]
visible = false
layout_mode = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 240.0
offset_bottom = 152.0
theme = ExtResource("10_4xw3u")
text = "000000"
horizontal_alignment = 2

[node name="Header_2" type="Label" parent="CanvasLayer/BarRight"]
visible = false
layout_mode = 0
offset_left = 50.0
offset_top = 300.0
offset_right = 251.0
offset_bottom = 390.0
theme = ExtResource("9_ved0s")
text = "Last
Word :"
horizontal_alignment = 1

[node name="Last_Word" type="Label" parent="CanvasLayer/BarRight"]
visible = false
layout_mode = 0
offset_left = 50.0
offset_top = 400.0
offset_right = 251.0
offset_bottom = 452.0
theme = ExtResource("10_4xw3u")
text = "---"
horizontal_alignment = 1

[node name="Header_3" type="Label" parent="CanvasLayer/BarRight"]
visible = false
layout_mode = 0
offset_left = 50.0
offset_top = 580.0
offset_right = 251.0
offset_bottom = 670.0
theme = ExtResource("9_ved0s")
text = "Next
Letter :"
horizontal_alignment = 1

[node name="Next_Letter" type="Label" parent="CanvasLayer/BarRight"]
visible = false
layout_mode = 0
offset_left = 50.0
offset_top = 680.0
offset_right = 251.0
offset_bottom = 805.0
theme = ExtResource("10_4xw3u")
theme_override_font_sizes/font_size = 60
text = "X"
horizontal_alignment = 1
uppercase = true

[node name="Game_Over" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 25.0
offset_right = -300.0
offset_bottom = -175.0
grow_horizontal = 2
grow_vertical = 2

[node name="Text_1" type="Label" parent="CanvasLayer/Game_Over"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 45.0
grow_horizontal = 2
theme = ExtResource("9_ved0s")
text = "Game Over"
horizontal_alignment = 1

[node name="Text_2" type="Label" parent="CanvasLayer/Game_Over"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 60.0
offset_bottom = 112.0
grow_horizontal = 2
theme = ExtResource("10_4xw3u")
text = "You've scored: 0
Leaderboard:"
horizontal_alignment = 1

[node name="Text_3" type="Label" parent="CanvasLayer/Game_Over"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 400.0
offset_bottom = 452.0
grow_horizontal = 2
theme = ExtResource("10_4xw3u")
text = "Press R to try again."
horizontal_alignment = 1

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_730sg")
volume_db = -10.0

[node name="sfx_no_match" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_uo0vf")
volume_db = -15.0
